fix: re-apply missing spacing.

--- a/packages/map-template/src/components/LocationDetails/LocationDetails.scss
+++ b/packages/map-template/src/components/LocationDetails/LocationDetails.scss
@@ -47,6 +47,7 @@
         margin-top: 0;
         height: auto;
         min-height: 0;
+        padding-bottom: var(--spacing-small);
 
         > *:first-child {
             margin-top: var(--spacing-medium);
